<resources>
    <string name="app_name">loginregister</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="email">email</string>
    <string name="fullname">fullname</string>
    <string name="loginhere">Already have an account?<u>Login here</u></string>
    <string name="signup">Signup</string>
</resources>